--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -17,6 +17,16 @@
 }
 
 /* Default CSS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
 .App {
   text-align: center;
 }
