--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -27,6 +27,15 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 75px;
 }
+
+body{
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: #121212 !important;
+  color: #fff !important;
+  font-family: 'Centra', sans-serif !important;
+}
 .App {
   text-align: center;
 }
